--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -5,7 +5,8 @@
 
 #header {
   background-image: url(../../assets/images/header-img.png);
+  background-repeat: no-repeat;
   min-width: 100%;
-  height: 101px;
-  background-color: black;
+  height: 104px;
+  // background-color: black;
 }
