create SCHEDULE A TOUR BUTTON

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,6 @@
 <p>
   home works!
 </p>
-<button type="button" name="button" id="tour-button"> SCHEDULE A TOUR</button>
+<span class="tour-button-border">
+  <a id="tour-button"> SCHEDULE A TOUR</a>
+</span> 
