--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,1 +1,15 @@
 
+#tour-button {
+  border-style: solid;
+  border-color: #979797;
+  border-width: 1px;
+  // border-radius: 1;
+  padding: 5px 2.5px 5px 2.5px ;
+}
+
+.tour-button-border {
+  border-style: solid;
+  border-color: #979797;
+  border-width: 1px;
+  padding: 7px 2.5px 7px 2.5px ;
+}
