--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,16 @@
-<p>
-  home works!
-</p>
 <span class="tour-button-border">
   <a id="tour-button"> SCHEDULE A TOUR</a>
-</span> 
+</span>
+
+<div id="carousel-section">
+<img src="" alt="">
+</div>
+
+<div id="amenities-section">
+  <div id="amenities-preview">
+    <a href="#">
+          <div class="preview-icons"> TEST</div>
+          <img src="../../assets/images/amenities-preview.png" alt="">
+        </a>
+  </div>
+</div>
