add footer image to footer

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,5 +1,6 @@
 #footer {
-  background-color: gray;
+  background-image: url(../../assets/images/footer-img-1.png);
+  background-repeat: no-repeat;
   width: 100%;
   height: 100px;
   position: absolute;
