add dropdown section

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,18 @@
 <div class="container">
   <div id="header">
-    
+
+  </div>
+  <div id="dropdown">
+    <ul>
+      <li>Home</li>
+      <li>Login</li>
+      <li>Plans</li>
+      <li>Amenities</li>
+      <li>Book A Conference</li>
+      <li>Gallery</li>
+      <li>Contact US</li>
+      <li>About Us</li>
+      <li></li>
+    </ul>
   </div>
 </div>
