--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,9 +1,9 @@
 .container {
-  min-width: 100%;
+  width: 700px;
   height: auto; }
 
 #header {
   background-image: url(../../assets/images/header-img.png);
   background-repeat: no-repeat;
-  min-width: 100%;
-  height: 104px; }
+  width: 120%;
+  height: 100px; }
