--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,12 +1,17 @@
 .container {
-  min-width: 100%;
+  width: 700px;
   height: auto;
+
 }
 
 #header {
   background-image: url(../../assets/images/header-img.png);
   background-repeat: no-repeat;
-  min-width: 100%;
-  height: 104px;
-  // background-color: black;
+  width: 120%;
+  height: 100px;
+
+}
+
+#dropdown {
+
 }
