add Tour With Us dropdown

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,15 +2,66 @@
   <a id="tour-button"> SCHEDULE A TOUR</a>
 </span>
 
+<!-- -------------Tour With US POP UP------------ -->
+
+<div id="Tour with us">
+  <ul>
+    <li>Full Name: <input type="text" name="" value=""></li>
+    <li>Email:<input type="text" name="" value=""></li>
+    <li>Phone:<input type="text" name="" value=""></li>
+  </ul>
+  <div class="">
+    <h4>Tour Date:</h4>
+    <ul>
+      <li>Date:<input type="text" name="" value=""></li>
+      <li>Time:<input type="text" name="" value=""></li>
+    </ul>
+  </div>
+</div>
+
+<!-- -------------------------------------------------- -->
+
 <div id="carousel-section">
-<img src="" alt="">
+  <img src="" alt="">
 </div>
 
 <div id="amenities-section">
   <div id="amenities-preview">
     <a href="#">
-          <div class="preview-icons"> TEST</div>
-          <img src="../../assets/images/amenities-preview.png" alt="">
-        </a>
+      <div class="preview-icons"> TEST</div>
+      <img src="../../assets/images/amenities-preview.png" alt="">
+    </a>
   </div>
+</div>
+
+
+<div id="plans-preview-section">
+  <h3>Plans</h3>
+  <div class="plans-preview" id="day-plan-preview">
+    <div class="plans-preview-text">
+
+    </div>
+    <div class="plans-preview-icons">
+
+    </div>
+  </div>
+
+  <div class="plans-preview" id="week-plan-preview">
+    <div class="plans-preview-text">
+      this is test text   this is test text   this is test text
+    </div>
+    <div class="plans-preview-icons">
+
+    </div>
+  </div>
+
+  <div class="plans-preview" id="month-plan-preview">
+    <div class="plans-preview-text">
+
+    </div>
+    <div class="plans-preview-icons">
+
+    </div>
+  </div>
+
 </div>
