--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -10,6 +10,9 @@
   border-width: 1px;
   padding: 7px 2.5px 7px 2.5px; }
 
+#amenities-section {
+  display: block; }
+
 #amenities-preview {
   width: 220px;
   height: 124px;
@@ -33,3 +36,27 @@
   padding-bottom: 10px;
   font-family: 'Raleway', sans-serif;
   font-weight: bolder; }
+
+#plans-preview-section {
+  margin-top: 200px;
+  display: block; }
+
+h3 {
+  text-align: center; }
+
+.plans-preview {
+  width: 300px;
+  height: 145px;
+  border-style: solid;
+  border-width: .5px;
+  border-color: gray;
+  border-radius: 8px;
+  margin: 10px auto; }
+
+.plans-preview-icons {
+  width: 84px;
+  height: 84px;
+  border-style: solid;
+  border-width: .5px;
+  border-color: gray;
+  border-radius: 8px; }
