--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,7 +1,8 @@
 #footer {
-  background-image: url(../../assets/images/footer-img-1.png);
+  background-color: #D2E0DB;
   background-repeat: no-repeat;
   width: 100%;
   height: 100px;
-  position: absolute;
-  bottom: 0; }
+  position: fixed;
+  bottom: 0;
+  display: block; }
