--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,8 +1,10 @@
 #footer {
-  background-image: url(../../assets/images/footer-img-1.png);
+  background-color: #D2E0DB;
   background-repeat: no-repeat;
   width: 100%;
   height: 100px;
-  position:absolute;
+  position:fixed;
    bottom:0;
+   display: block;
+
 }
