add pass description text

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,11 +5,16 @@
 <!-- -------------Tour With US POP UP------------ -->
 
 <div id="Tour with us">
+
+<div class="">
   <ul>
     <li>Full Name: <input type="text" name="" value=""></li>
     <li>Email:<input type="text" name="" value=""></li>
     <li>Phone:<input type="text" name="" value=""></li>
   </ul>
+</div>
+
+
   <div class="">
     <h4>Tour Date:</h4>
     <ul>
@@ -17,6 +22,7 @@
       <li>Time:<input type="text" name="" value=""></li>
     </ul>
   </div>
+<button type="button" name="button">Submit</button>
 </div>
 
 <!-- -------------------------------------------------- -->
@@ -42,7 +48,7 @@
 
     </div>
     <div class="plans-preview-icons">
-
+      <a>Day Pass</a>
     </div>
   </div>
 
@@ -51,7 +57,7 @@
       this is test text   this is test text   this is test text
     </div>
     <div class="plans-preview-icons">
-
+      <a> Week Pass</a>
     </div>
   </div>
 
@@ -60,7 +66,7 @@
 
     </div>
     <div class="plans-preview-icons">
-
+      <a>Month Pass</a>
     </div>
   </div>
 
