--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -54,8 +54,7 @@ display: block;
 // -------------Plans Section---------------
 #plans-preview-section {
 
-  margin-top: 200px;
-  display: block;
+  // margin-top: 200px;
 }
 h3 {
   text-align: center;
