position test button header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div id="header">
-
+    <button type="button" name="button">Push Me</button>
   </div>
   <div id="dropdown">
     <ul>
