--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -2,8 +2,20 @@
   width: 700px;
   height: auto; }
 
+button {
+  position: absolute;
+  left: 350px;
+  top: 25px; }
+
 #header {
   background-image: url(../../assets/images/header-img.png);
   background-repeat: no-repeat;
   width: 120%;
-  height: 100px; }
+  height: 100px;
+  position: relative; }
+
+#dropdown {
+  display: none; }
+  #dropdown li {
+    list-style-type: none;
+    text-transform: uppercase; }
