--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -4,14 +4,25 @@
 
 }
 
+button {
+position: absolute;
+left: 350px;
+top: 25px;
+}
+
 #header {
   background-image: url(../../assets/images/header-img.png);
   background-repeat: no-repeat;
   width: 120%;
   height: 100px;
-
+  position: relative;
 }
 
-#dropdown {
+#dropdown  {
+  display: none;
+  li {
+    list-style-type: none;
+    text-transform: uppercase;
+  }
 
 }
