add css hamburger navigation

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,18 +1,23 @@
 <div class="container">
   <div id="header">
-    <button type="button" name="button">Push Me</button>
-  </div>
-  <div id="dropdown">
-    <ul>
-      <li>Home</li>
-      <li>Login</li>
-      <li>Plans</li>
-      <li>Amenities</li>
-      <li>Book A Conference</li>
-      <li>Gallery</li>
-      <li>Contact US</li>
-      <li>About Us</li>
-      <li></li>
-    </ul>
+
+    <nav role="navigation">
+      <div id="menuToggle">
+          <input type="checkbox" />
+        <span></span>
+        <span></span>
+        <span></span>
+        <ul id="menu">
+          <a href="#"><li>Home</li></a>
+          <a href="#"><li>Login</li></a>
+          <a href="#"><li>Plans</li></a>
+          <a href="#"><li>Amenities</li></a>
+          <a href="#"><li>Book A Conference</li></a>
+          <a href="#"><li>Gallery</li></a>
+          <a href="#"><li>Contact US</li></a>
+          <a href="#"><li>About Us</li></a>
+        </ul>
+      </div>
+    </nav>
   </div>
 </div>
