--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-header></app-header>
-<app-home></app-home>
+<router-outlet></router-outlet>
+<!-- <app-home></app-home> -->
+<!-- <app-plans></app-plans> -->
 <app-footer></app-footer>
