--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,17 +2,18 @@
   <a id="tour-button"> SCHEDULE A TOUR</a>
 </span>
 
+
 <!-- -------------Tour With US POP UP------------ -->
 
-<div id="Tour with us">
+<div id="tour-with-us">
 
-<div class="">
-  <ul>
-    <li>Full Name: <input type="text" name="" value=""></li>
-    <li>Email:<input type="text" name="" value=""></li>
-    <li>Phone:<input type="text" name="" value=""></li>
-  </ul>
-</div>
+  <div class="">
+    <ul>
+      <li>Full Name: <input type="text" name="" value=""></li>
+      <li>Email:<input type="text" name="" value=""></li>
+      <li>Phone:<input type="text" name="" value=""></li>
+    </ul>
+  </div>
 
 
   <div class="">
@@ -22,7 +23,7 @@
       <li>Time:<input type="text" name="" value=""></li>
     </ul>
   </div>
-<button type="button" name="button">Submit</button>
+  <button type="button" name="button">Submit</button>
 </div>
 
 <!-- -------------------------------------------------- -->
