--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,6 +5,7 @@
   border-width: 1px;
   // border-radius: 1;
   padding: 5px 2.5px 5px 2.5px ;
+
 }
 
 .tour-button-border {
@@ -12,10 +13,13 @@
   border-color: #979797;
   border-width: 1px;
   padding: 7px 2.5px 7px 2.5px ;
+
 }
 
 // -------------Tour With US POP UP------------
-
+#tour-with-us{
+  visibility: hidden;
+}
 // --------------------------------------------------
 
 #carousel-section {
