--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -8,7 +8,8 @@
   border-style: solid;
   border-color: #979797;
   border-width: 1px;
-  padding: 7px 2.5px 7px 2.5px; }
+  padding: 7px 2.5px 7px 2.5px;
+  max-width: 159px; }
 
 #tour-with-us {
   visibility: hidden; }
@@ -59,3 +60,8 @@ h3 {
   border-width: .5px;
   border-color: gray;
   border-radius: 8px; }
+
+#carousel-section {
+  grid-area: row1;
+  max-width: 60%;
+  margin: 0; }
