--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,74 +1,102 @@
-<span class="tour-button-border">
-  <a id="tour-button"> SCHEDULE A TOUR</a>
-</span>
+<div id="home-container">
+  <span class="tour-button-border" id="tour-button-border">
+    <a id="tour-button"> SCHEDULE A TOUR</a>
+  </span>
 
 
-<!-- -------------Tour With US POP UP------------ -->
+  <!-- -------------Tour With US POP UP------------ -->
 
-<div id="tour-with-us">
+  <div id="tour-with-us">
 
-  <div class="">
-    <ul>
-      <li>Full Name: <input type="text" name="" value=""></li>
-      <li>Email:<input type="text" name="" value=""></li>
-      <li>Phone:<input type="text" name="" value=""></li>
-    </ul>
+    <div class="">
+      <ul>
+        <li>Full Name: <input type="text" name="" value=""></li>
+        <li>Email:<input type="text" name="" value=""></li>
+        <li>Phone:<input type="text" name="" value=""></li>
+      </ul>
+    </div>
+
+
+    <div class="">
+      <h4>Tour Date:</h4>
+      <ul>
+        <li>Date:<input type="text" name="" value=""></li>
+        <li>Time:<input type="text" name="" value=""></li>
+      </ul>
+    </div>
+    <button type="button" name="button">Submit</button>
   </div>
 
+  <!-- -------------------------------------------------- -->
 
-  <div class="">
-    <h4>Tour Date:</h4>
-    <ul>
-      <li>Date:<input type="text" name="" value=""></li>
-      <li>Time:<input type="text" name="" value=""></li>
-    </ul>
+  <div id="carousel-section">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active">
+      <img class="d-block img-fluid" src="../assets/images/carousel/coffee-counter-area.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block img-fluid" src="../assets/images/carousel/coffee-counter-area.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block img-fluid" src="../assets/images/carousel/coffee-counter-area.jpg" alt="Third slide">
+    </div>
   </div>
-  <button type="button" name="button">Submit</button>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
 
-<!-- -------------------------------------------------- -->
-
-<div id="carousel-section">
-  <img src="" alt="">
-</div>
-
-<div id="amenities-section">
-  <div id="amenities-preview">
-    <a href="#">
-      <div class="preview-icons"> TEST</div>
-      <img src="../../assets/images/amenities-preview.png" alt="">
-    </a>
   </div>
-</div>
 
-
-<div id="plans-preview-section">
-  <h3>Plans</h3>
-  <div class="plans-preview" id="day-plan-preview">
-    <div class="plans-preview-text">
-
-    </div>
-    <div class="plans-preview-icons">
-      <a>Day Pass</a>
+  <div id="amenities-section">
+    <div id="amenities-preview">
+      <a href="#">
+        <div class="preview-icons"> TEST</div>
+        <img src="../../assets/images/amenities-preview.png" alt="">
+      </a>
     </div>
   </div>
 
-  <div class="plans-preview" id="week-plan-preview">
-    <div class="plans-preview-text">
-      this is test text   this is test text   this is test text
+
+  <div id="plans-preview-section">
+    <h3>Plans</h3>
+    <div class="plans-preview" id="day-plan-preview">
+      <div class="plans-preview-text">
+
+      </div>
+      <div class="plans-preview-icons">
+        <a>Day Pass</a>
+      </div>
     </div>
-    <div class="plans-preview-icons">
-      <a> Week Pass</a>
+
+    <div class="plans-preview" id="week-plan-preview">
+      <div class="plans-preview-text">
+        this is test text   this is test text   this is test text
+      </div>
+      <div class="plans-preview-icons">
+        <a> Week Pass</a>
+      </div>
     </div>
+
+    <div class="plans-preview" id="month-plan-preview">
+      <div class="plans-preview-text">
+
+      </div>
+      <div class="plans-preview-icons">
+        <a>Month Pass</a>
+      </div>
+    </div>
+
   </div>
-
-  <div class="plans-preview" id="month-plan-preview">
-    <div class="plans-preview-text">
-
-    </div>
-    <div class="plans-preview-icons">
-      <a>Month Pass</a>
-    </div>
-  </div>
-
 </div>
