--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -12,14 +12,12 @@
   max-width: 159px; }
 
 #tour-with-us {
-  visibility: hidden; }
-
-#amenities-section {
-  display: block; }
+  visibility: hidden;
+  position: absolute; }
 
 #amenities-preview {
   width: 220px;
-  height: 124px;
+  height: auto;
   margin-right: 18px;
   margin-top: 20px;
   position: relative;
@@ -41,8 +39,13 @@
   font-family: 'Raleway', sans-serif;
   font-weight: bolder; }
 
+#plans-preview-section {
+  max-width: 20%;
+  display: block; }
+
 h3 {
-  text-align: center; }
+  text-align: center;
+  max-width: 10%; }
 
 .plans-preview {
   width: 300px;
@@ -61,7 +64,35 @@ h3 {
   border-color: gray;
   border-radius: 8px; }
 
+#home-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin: 0 0 20px 0;
+  height: 120%; }
+
+.tour-button-border {
+  width: 159px;
+  z-index: 0; }
+
+.preview-icons {
+  display: block; }
+
 #carousel-section {
-  grid-area: row1;
-  max-width: 60%;
-  margin: 0; }
+  display: block;
+  max-width: 80%; }
+
+#plans-preview-section {
+  display: block; }
+
+#home-container > div, .tour-button-border {
+  margin-bottom: 20px; }
