--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -21,25 +21,22 @@
 // -------------Tour With US POP UP------------
 #tour-with-us{
   visibility: hidden;
+  position: absolute;
 }
+
+
 // --------------------------------------------------
 
-#carousel-section {
-
-}
-
-#amenities-section{
-display: block;
-}
 
 #amenities-preview {
   width: 220px;
-  height: 124px;
+  height: auto;
   margin-right: 18px;
   margin-top: 20px;
   position: relative;
   text-align: center;
   color: white;
+
 }
 
 .preview-icons{
@@ -59,11 +56,14 @@ display: block;
 
 // -------------Plans Section---------------
 #plans-preview-section {
-
+ max-width: 20%;
   // margin-top: 200px;
+  display: block;
+
 }
 h3 {
   text-align: center;
+  max-width: 10%;
 }
 .plans-preview {
   width: 300px;
@@ -91,32 +91,38 @@ h3 {
 
 
 // ------------------------------------------------
-// #home-container {
-//   display:grid;
-//   grid-template-columns: (9, 1fr);
-//   // grid-column-gap: 16px;
-//   //   grid-auto-rows: minmax(100px, auto);
-//     grid-template-areas:
-//     ". . . . row0 . . . . "
-//     ". . . . row1 row1 . . . "
-//     ". . . row2 row2 . . . "
-//     ". . . row3 row3 row3 . . . ";
-//
-//     // margin-left: 75px;
-// }
-// .tour-button-border{
-//   grid-area: row0;
-//
-// }
-//
-#carousel-section {
-  grid-area: row1;
-  max-width: 60%;
-  margin: 0;
+#home-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 0 20px 0;
+  height: 120%;
 }
-// #plans-preview-section {
-//   grid-area: row2;
-// }
-// # {
-//   grid-area: row5;
-// }
+
+.tour-button-border{
+
+// display: block;
+
+  width: 159px;
+  z-index: 0
+  ;
+
+}
+.preview-icons {
+  display: block;
+
+}
+#carousel-section {
+display: block;
+  max-width: 80%;
+
+}
+#plans-preview-section {
+  display: block;
+
+}
+
+#home-container > div, .tour-button-border {
+ margin-bottom: 20px;
+}
