add mixin, add flex to plans-preview

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -60,19 +60,33 @@
   </div>
 
   <div id="amenities-section">
-    <div id="amenities-preview">
-      <a href="#">
-        <div class="preview-icons"> TEST</div>
-        <img src="../../assets/images/amenities-preview.png" alt="">
-      </a>
-    </div>
+    <img src="../../assets/images/preview/mirrors-green.png" alt="">
+    <!-- <div id="amenities-preview">
+    <a href="#">
+    <div class="preview-icons">
+    <img src="../assets/images/preview/24-hour-access.png" alt="">
+    <img src="../assets/images/preview/conference-rooms.png" alt="">
+    <img src="../assets/images/preview/pets-allowed.png" alt="">
+    <img src="../assets/images/preview/full-bar.png" alt="">
+    <img src="../assets/images/preview/free-wifi.png" alt="">
+    <img src="../assets/images/preview/yoga-classes.png" alt="">
   </div>
 
+  <img src="../../assets/images/amenities-preview.png" alt="">
+</a>
+</div> -->
+</div>
 
-  <div id="plans-preview-section">
-    <h3>Plans</h3>
+
+<div id="plans-preview-section">
+  <h3>Plans</h3>
+  <div id="plans-preview-container">
+    <div class="background">
+      
+    </div>
     <div class="plans-preview" id="day-plan-preview">
       <div class="plans-preview-text">
+        <a>$10</a>
 
       </div>
       <div class="plans-preview-icons">
@@ -82,7 +96,7 @@
 
     <div class="plans-preview" id="week-plan-preview">
       <div class="plans-preview-text">
-        this is test text   this is test text   this is test text
+        <p>$40</p>
       </div>
       <div class="plans-preview-icons">
         <a> Week Pass</a>
@@ -91,12 +105,14 @@
 
     <div class="plans-preview" id="month-plan-preview">
       <div class="plans-preview-text">
-
+        <p>$200</p>
       </div>
       <div class="plans-preview-icons">
         <a>Month Pass</a>
       </div>
     </div>
-
   </div>
+
+
+</div>
 </div>
