add about images

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,19 +1,34 @@
-<p>
-  about works!
-</p>
+<div class="about-container">
+  <h3>About Us</h3><br>
+  <div class="info-cards-container">
+    <div class="about-info-cards" id="image-1">
+      <a>
+        <div class="about-header-text"></div>
+        <img src="../../assets/images/about/growth-yoga-words.png" alt="">
+      </a>
+    </div>
 
-<div id="growth-info">
 
-</div>
+    <div class="about-info-cards" id="image-2">
+      <a>
+        <div class="about-header-text"></div>
+        <img src="../../assets/images/about/love-work-words.png" alt="">
+      </a>
+    </div>
 
-<div id="">
 
-</div>
+    <div class="about-info-cards"  id="image-3">
+      <a>
+        <div class="about-header-text"></div>
+        <img src="../../assets/images/about/dream-up-new-ideas.png" alt="">
+      </a>
+    </div>
 
-<div id="">
-
-</div>
-
-<div id="">
-
+    <div class="about-info-cards"  id="image-4">
+      <a>
+        <div class="about-header-text"></div>
+        <img src="../../assets/images/about/relax-words.png" alt="">
+      </a>
+    </div>
+  </div>
 </div>
