--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div id="home-container">
   <span class="tour-button-border" id="tour-button-border">
-    <a id="tour-button"> SCHEDULE A TOUR</a>
+    <a routerLink="stour" id="tour-button"> SCHEDULE A TOUR</a>
   </span>
 
 
@@ -60,59 +60,54 @@
   </div>
 
   <div id="amenities-section">
-    <img src="../../assets/images/preview/mirrors-green.png" alt="">
-    <!-- <div id="amenities-preview">
-    <a href="#">
-    <div class="preview-icons">
-    <img src="../assets/images/preview/24-hour-access.png" alt="">
-    <img src="../assets/images/preview/conference-rooms.png" alt="">
-    <img src="../assets/images/preview/pets-allowed.png" alt="">
-    <img src="../assets/images/preview/full-bar.png" alt="">
-    <img src="../assets/images/preview/free-wifi.png" alt="">
-    <img src="../assets/images/preview/yoga-classes.png" alt="">
-  </div>
+    <div id="amenities-preview">
+      <a href="#">
+        <h3>Amenities</h3>
+        <!-- <div class="preview-icons">
+          <img src="../assets/images/preview/24-hour-access.png" alt="">
+          <img src="../assets/images/preview/conference-rooms.png" alt="">
+          <img src="../assets/images/preview/pets-allowed.png" alt="">
+          <img src="../assets/images/preview/full-bar.png" alt="">
+          <img src="../assets/images/preview/free-wifi.png" alt="">
+          <img src="../assets/images/preview/yoga-classes.png" alt="">
+        </div> -->
 
-  <img src="../../assets/images/amenities-preview.png" alt="">
-</a>
-</div> -->
-</div>
-
-
-<div id="plans-preview-section">
-  <h3>Plans</h3>
-  <div id="plans-preview-container">
-    <div class="background">
-      
-    </div>
-    <div class="plans-preview" id="day-plan-preview">
-      <div class="plans-preview-text">
-        <a>$10</a>
-
-      </div>
-      <div class="plans-preview-icons">
-        <a>Day Pass</a>
-      </div>
-    </div>
-
-    <div class="plans-preview" id="week-plan-preview">
-      <div class="plans-preview-text">
-        <p>$40</p>
-      </div>
-      <div class="plans-preview-icons">
-        <a> Week Pass</a>
-      </div>
-    </div>
-
-    <div class="plans-preview" id="month-plan-preview">
-      <div class="plans-preview-text">
-        <p>$200</p>
-      </div>
-      <div class="plans-preview-icons">
-        <a>Month Pass</a>
-      </div>
+        <img src="../../assets/images/preview/amenities-preview.png" alt="">
+      </a>
     </div>
   </div>
 
 
-</div>
+  <div id="plans-preview-section">
+    <h3>Plans</h3>
+    <div id="plans-preview-container">
+      <div class="plans-preview" id="day-plan-preview">
+        <div class="plans-preview-text">
+          <a>$10</a>
+
+        </div>
+        <div class="plans-preview-icons">
+          <a>Day Pass</a>
+        </div>
+      </div>
+
+      <div class="plans-preview" id="week-plan-preview">
+        <div class="plans-preview-text">
+          <p>$40</p>
+        </div>
+        <div class="plans-preview-icons">
+          <a> Week Pass</a>
+        </div>
+      </div>
+
+      <div class="plans-preview" id="month-plan-preview">
+        <div class="plans-preview-text">
+          <p>$200</p>
+        </div>
+        <div class="plans-preview-icons">
+          <a>Month Pass</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
