add additional routes, and routes to hamburger links

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -78,7 +78,7 @@
   </div>
 
 
-  <div id="plans-preview-section">
+  <div id="plans-preview-section" id="plans">
     <h3>Plans</h3>
     <div id="plans-preview-container">
       <div class="plans-preview" id="day-plan-preview">
