--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,13 +8,13 @@
         <span></span>
         <ul id="menu">
           <a href="#"><li>Home</li></a>
-          <a href="#"><li>Login</li></a>
-          <a href="#"><li>Plans</li></a>
+          <a><li>Login</li></a>
+          <a href="#" routerLink="plans"><li>Plans</li></a>
           <a href="#"><li>Amenities</li></a>
           <a href="#"><li>Book A Conference</li></a>
           <a href="#"><li>Gallery</li></a>
-          <a href="#"><li>Contact US</li></a>
-          <a href="#"><li>About Us</li></a>
+          <a href="#" routerLink="contact"><li>Contact US</li></a>
+          <a href="#" routerLink="about"><li>About Us</li></a>
         </ul>
       </div>
     </nav>
