add icons and contact info to header

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,11 @@
 
 <div id="footer">
-
+  <div id="footer-images">
+    <img src="../../assets/images/social/facebook.png" alt="" class="social-icon" id="facebook-icon">
+    <img src="../../assets/images/social/instagram.png" alt="" class="social-icon" id="instagram-icon">
+  </div>
+  <div id="contact-info">
+    <p>Hours: 9-5 Mon-Fri</p>
+    <p>Phone: 555-555-555</p>
+  </div>
 </div>
