--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,4 +1,8 @@
 #footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  display: inline-block;
   background-color: #D2E0DB;
   background-repeat: no-repeat;
   width: 100%;
@@ -6,3 +10,10 @@
   position: fixed;
   bottom: 0;
   display: block; }
+
+#footer-images {
+  width: 90px; }
+
+img {
+  height: 40px;
+  width: 40px; }
