login and tour component pages and routes

--- a/src/app/stour/stour.component.html
+++ b/src/app/stour/stour.component.html
@@ -1,3 +1,12 @@
-<p>
-  stour works!
-</p>
+<div class="">
+  <h3>Tour With Us</h3>
+  <div class="">
+    <p>Full Name: <input type="text" name="" value="" placeholder="Required"> </p>
+    <p>Email: <input type="text" name="" value="" placeholder="Required"> </p>
+    <p>Phone: <input type="text" name="" value="" placeholder="Required"> </p>
+  </div>
+  <p>Tour Date</p>
+  <p>Date <span>*</span> <input type="text" name="" value="" placeholder="Date"> </p>
+  <p>Time <span>*</span> <input type="text" name="" value="" placeholder="Time"> </p>
+  <button type="button" name="button">Submit</button>
+</div>
