--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,9 +8,10 @@
         <span></span>
         <ul id="menu">
           <a href="#"><li>Home</li></a>
-          <a><li>Login</li></a>
+          <a routerLink="login"><li>Login</li></a>
           <a href="#" routerLink="plans"><li>Plans</li></a>
           <a href="#"><li>Amenities</li></a>
+            <a routerLink="stour"><li>Tour</li></a>
           <a href="#"><li>Book A Conference</li></a>
           <a href="#"><li>Gallery</li></a>
           <a href="#" routerLink="contact"><li>Contact US</li></a>
