--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -41,10 +41,10 @@
           <img class="d-block img-fluid" src="../assets/images/carousel/coffee-counter-area.jpg" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block img-fluid" src="../assets/images/carousel/coffee-counter-area.jpg" alt="Second slide">
+          <img class="d-block img-fluid" src="../assets/images/carousel/green-room.png" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block img-fluid" src="../assets/images/carousel/coffee-counter-area.jpg" alt="Third slide">
+          <img class="d-block img-fluid" src="../assets/images/carousel/xoxo.png" alt="Third slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
