--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -66,21 +66,6 @@
   height: 100%;
 }
 
-// .preview-icons{
-//   display: flex;
-//   justify-content: flex-start;
-//   // position: absolute;
-//   // top: 50%;
-//   // left: 50%;
-//   transform: translate(-50%, -50%);
-//
-//   line-height: 10px;
-//   border-top: 1px solid white;
-//   padding-top: 10px;
-//   border-bottom: 1px solid white;
-//   padding-bottom: 10px;
-//  background-image: url();
-// }
 
 // -------------Plans Section---------------
 #plans-preview-container {
@@ -91,7 +76,7 @@
 
 }
 #plans-preview-section h3 {
-  max-width: auto;
+  // max-width: auto;
   text-align: center;
 
 }
@@ -116,8 +101,8 @@
   border-radius: 8px;
   background-color: rgba(255,255,255,0.1);
   // background-image: url(../../assets/images/plans-preview/motion_cube.gif);
-   // background-repeat: no-repeat;
-   // background-attachment: fixed;
+  // background-repeat: no-repeat;
+  // background-attachment: fixed;
   // background-position: center;
   // background-size: 100%;
 
@@ -187,14 +172,15 @@
   display: block;
 
 }
-#carousel-section {
+#carousel-section img {
   display: block;
-  max-width: 80%;
-
+  min-height: 500px;
+  max-height: 500px;
 }
-#plans-preview-section {
-  display: block;
-  margin-top: 5%;
+#plans-preview-section h3 {
+  // display: block;
+  margin-top: 20px;
+  text-align: center;
 }
 
 #home-container:last-of-type {
@@ -207,13 +193,15 @@
 
 @media only screen and (min-width:500px) {
   #carousel-section {
-    max-width: 411px;
+    // min-height: 400px;
+    max-height: 400px;
   }
 }
 
 @media only screen and (min-width:800px) {
   #carousel-section {
-    max-width: 700px;
+    // min-height: 600px;
+    max-height: 600px;
   }
 
 }
