add input values to login component page

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,10 @@
-<p>
-  login works!
-</p>
+<!-- <img src="../../assets/images/login.png" alt=""> -->
+<div class="login-container">
+  <h3>Login</h3>
+  <div id="login-items">
+    <input type="text" name="Email" value="" placeholder="Email: ">
+    <input type="text" name="" value="" placeholder="Password: ">
+    <button type="button" name="button">Login</button>
+    <input type="checkbox" name="" value="" id="checkbox"> <a>Keep me logged in</a>
+  </div>
+</div>
