--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -79,7 +79,7 @@
 
 
   <div id="plans-preview-section" id="plans">
-    <h3>Plans</h3>
+    <h3 id="plans-h3">Plans</h3>
     <div id="plans-preview-container">
       <div class="plans-preview" id="day-plan-preview">
         <div class="plans-preview-text">
