--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -175,11 +175,6 @@ text-align: center;
   display: block;
 
 }
-#carousel-section img {
-  display: block;
-  min-height: 500px;
-  max-height: 500px;
-}
 
 #home-container:last-of-type {
   margin-bottom: 10%;
@@ -189,6 +184,13 @@ text-align: center;
   margin-bottom: 20px;
 }
 
+// #carousel-section img {
+//   display: block;
+//   min-height: 500px;
+//   max-height: 500px;
+// }
+
+
 @media only screen and (max-width:500px) {
   #carousel-section {
     // min-height: 400px;
@@ -197,8 +199,8 @@ text-align: center;
   }
   .img-fluid {
     // height: 400px;
-    min-width: 100%;
-    max-width: 100%;
+    min-width: 90%;
+    max-width: 90%;
     background: no-repeat scroll center top transparent;
   }
 }
@@ -209,7 +211,7 @@ text-align: center;
   }
   .img-fluid {
     max-height: 500px;
-    min-width: 100%;
+    min-width: 90%;
   }
 }
 
