--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -12,19 +12,12 @@
 }
 
 button {
-position: absolute;
-left: 350px;
-top: 25px;
+  position: absolute;
+  left: 350px;
+  top: 25px;
 }
 
-#header {
-  background-image: url(../../assets/images/header-img.png);
-  background-repeat: no-repeat;
-  width: 400px;
-  height: 100px;
-  margin: 5px auto 20px auto;
-  // position: relative;
-}
+
 
 #dropdown  {
   display: none;
@@ -34,3 +27,26 @@ top: 25px;
   }
 
 }
+
+@media only screen and (min-width: 500px) {
+  #header {
+    background-image: url(../../assets/images/header-img.png);
+    background-repeat: no-repeat;
+    width: 400px;
+    height: 120px;
+    margin: 5px auto 20px auto;
+    // position: relative;
+  }
+}
+
+
+// @media only screen and (min-width: 800px) {
+//   #header {
+//     background-image: url(../../assets/images/header-big.png);
+//     background-repeat: no-repeat;
+//     width: 1000px;
+//     height: auto;
+//     margin: 5px auto 20px auto;
+//     // position: relative;
+//   }
+// }
