add syling to submit button

--- a/src/app/stour/stour.component.html
+++ b/src/app/stour/stour.component.html
@@ -8,5 +8,5 @@
   <p>Tour Date</p>
   <p>Date <span>*</span> <input type="text" name="" value="" placeholder="Date"> </p>
   <p>Time <span>*</span> <input type="text" name="" value="" placeholder="Time"> </p>
-  <button type="button" name="button">Submit</button>
+  <button type="button" class="btn btn-primary" name="button">Submit</button>
 </div>
