add styling to login button

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -11,5 +11,9 @@ margin-left: 45%;
   align-content: center;
   justify-content: center;
   text-align: center;
+}
 
+button {
+  margin-top: .2rem;
+  margin-right: 7rem;
 }
