--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -20,3 +20,7 @@
   -ms-flex-pack: center;
   justify-content: center;
   text-align: center; }
+
+button {
+  margin-top: .2rem;
+  margin-right: 7rem; }
