--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -182,6 +182,14 @@ button {
     list-style-type: none;
     text-transform: uppercase; }
 
+@media only screen and (min-width: 500px) {
+  #header {
+    background-image: url(../../assets/images/header-img.png);
+    background-repeat: no-repeat;
+    width: 400px;
+    height: 120px;
+    margin: 5px auto 20px auto; } }
+
 #tour-button {
   border-style: solid;
   border-color: #979797;
